Javadocs completed. Migrated to JDK23.